fixed z-index styles and search list styles
- fixed z-index styles
- fixed search list styles and added title in display data

--- a/apps/frontend/src/components/main-layout/header/search/Search.module.scss
+++ b/apps/frontend/src/components/main-layout/header/search/Search.module.scss
@@ -1,3 +1,3 @@
 .search {
-	@apply relative w-5/12;
+	@apply relative w-5/12 z-[51];
 }
