--- a/apps/frontend/src/components/main-layout/header/search/search-list/SearchList.module.scss
+++ b/apps/frontend/src/components/main-layout/header/search/search-list/SearchList.module.scss
@@ -1,9 +1,9 @@
 .list {
-	@apply grid grid-cols-5 absolute border border-gray-700 rounded-lg bg-gray-800 w-full animate-fade z-10;
+	@apply absolute z-[51] border border-gray-700 rounded-lg bg-gray-800 w-full animate-fade;
 	top: calc(100% + 15px);
 
 	.item {
-		@apply flex items-center py-3 px-4 relative;
+		@apply flex gap-3 items-center py-3 px-4 relative z-[1000];
 	}
 }
 
